@@ -1,5 +1,11 @@
 This file contains all changes done on the 1.4 version.
 
+Release Notes - Wicket - Version 1.4.21
+
+** Bug
+    * [WICKET-4512] - Wicket session id not up to date due to Tomcat session fixation protection
+    * some minor fixes. This is the last release in the 1.4 branch, rounding up remaining changes since 1.4.20.
+
 Release Notes - Wicket - Version 1.4.20
 
 ** Bug
